--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
           <img src="img10.jpeg" style="width:100%; height: 0%;" alt="Avatar">
-          <div class="w3-display-topleft w3-container w3-text-white">
+          <div class="w3-display-topleft w3-container w3-text-black">
             <h2>Vaishnavi Reddy Nandikandi</h2>
           </div>
         </div>
@@ -129,8 +129,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 		<div class="row text-center" >
 			<div class="col-md-4" style="align-items: center;  margin: 0 auto;" >
                 <br>
-				<img src="img1.png" height="70px" width="150px">
-				
 				<p>nandikandivaishnavi@gmail.com</p>
 				<p>9381205264</p>
 				<p>4-8-69/4/5/1,Manjeera Nagar</p>
