--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
            </div>
 			<div class="col-12">
 				<hr class="light">
-				<h5>&copy; vaishnavi.com</h5>
+				<h5>&copy;nandikandivaishnavi@gmail.com</h5>
 			</div>
 		</div>
 	</div>
